# financial-a2a-solution

./: .env.example  .gitignore  .ruff.toml  Cargo.toml  README.md  SET:KBANK.backtest.html  part.pkl  pyproject.toml  try_pydantic.py
deprecated/: lib.rs
src/: lib.rs  main.rs
src/financial_a2a_solution/: mod.rs  the_solution.pyi  types.py
src/financial_a2a_solution/balance_sheet_agent/: __main__.py  agent.py  agent_executor.py  decide.jinja  mcp.py
src/financial_a2a_solution/main_agent/: __init__.py  __main__.py  agent.py  agents.jinja  constant.py  decide.jinja
src/financial_a2a_solution/technical_analyser_agent/: __main__.py  agent.py  agent_executor.py  decide.jinja  mcp.py
src/financial_a2a_solution/the_solution/: __init__.pyi  prompts.pyi  utils.pyi
src/financial_a2a_solution/tui/: __main__.py  mock_up_data.py
src/prompts/: agent_answer.rs  agent_decide.rs  available_agents.rs  called_tools_history.rs  mod.rs  tool_decide.rs  tools.rs
src/utils/: mod.rs
tests/prompts/: test_get_available_agents_prompts.py
