[package]
name = "financial_a2a_solution"
version = "0.1.0"
edition = "2021"

[lib]
name = "the_solution"
# "cdylib" is necessary to produce a shared library for Python to import from.
# If run with `cargo run`, remove this line.
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
once_cell = "1.21.3"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39", "auto-initialize"] }
serde = {version =  "*", features = ["derive"]}
tera = "1.20.0"
